--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "eslint": "9.x",
+    "eslint-plugin-vue": "^9.26.0",
+    "globals": "^15.4.0",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^7.13.0",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
   }
