--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "eslint": "9.x",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.26.0",
     "globals": "^15.4.0",
+    "prettier": "^3.3.1",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.13.0",
     "vite": "^5.2.0",
