--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier src --write"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "vue": "^3.4.21"
   },
   "devDependencies": {
