--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.13.0",
     "vite": "^5.2.0",
+    "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.0.6"
   }
 }
