--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "highcharts": "^11.4.3",
+    "highcharts-vue": "^2.0.1",
     "vue": "^3.4.21"
   },
   "devDependencies": {
