--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint src",
-    "format": "prettier src --write"
+    "lint": "eslint src test",
+    "format": "prettier src test --write"
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -18,15 +18,21 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "9.x",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.26.0",
     "globals": "^15.4.0",
+    "jsdom": "^24.1.0",
     "prettier": "^3.3.1",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.13.0",
     "vite": "^5.2.0",
+    "vitest": "^1.6.0",
     "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.0.6"
+  },
+  "resolutions": {
+    "strip-ansi": "6.0.1"
   }
 }
