--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,12 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": [
+    "src/**/*.ts", 
+    "src/**/*.tsx", 
+    "src/**/*.vue",
+    "test/**/*.ts", 
+    "test/**/*.tsx", 
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
