--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -47,6 +47,7 @@ jobs:
         run: yarn run build
         env:
           NODE_ENV: production
+          REPOSITORY_NAME: ${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
