repo name の取得を検証

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Install NPM packages (use Yarn)
         run: yarn install --frozen-lockfile
       
+      - name: Echo repo name
+        run: echo ${{ github.event.repository.name }}
+
       - name: Create env file
         run: |
           touch .env
