--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier src test --write"
   },
   "dependencies": {
+    "@vitest/coverage-v8": "^1.6.0",
     "axios": "^1.7.2",
     "highcharts": "^11.4.3",
     "highcharts-vue": "^2.0.1",
